# ast-migrator

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  ast-migrator.cabal  stack.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml
app/: Main.hs
src/: AstMigrator.hs
src/Text/Pandoc/AST/: Migrator.hs  V1_20.hs  V1_21.hs  V1_22.hs
src/Text/Pandoc/AST/V1_20/: Definition.hs  Up.hs
src/Text/Pandoc/AST/V1_21/: Builder.hs  Definition.hs  Down.hs  Up.hs
src/Text/Pandoc/AST/V1_22/: Definition.hs  Down.hs
