cabal-version:       2.4
name:                ast-migrator
version:             0.0.0.0
synopsis:            Migrate documents from one pandoc AST schema to another
description:         Migrate documents from one pandoc AST schema to another
homepage:            https://github.com/tarleb/ast-migrator
bug-reports:         https://github.com/tarleb/ast-migrator/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <albert@zeitkraut.de>
copyright:           2020 Albert Krewinkel
category:            Text
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/tarleb/ast-migrator.git

common common-options
  build-depends:       base       >= 4.9   && < 5
                     , aeson
                     , text
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Text.Pandoc.AST.Migrator
                     , Text.Pandoc.AST.V1_20
                     , Text.Pandoc.AST.V1_20.Definition
                     , Text.Pandoc.AST.V1_20.Up
                     , Text.Pandoc.AST.V1_21
                     , Text.Pandoc.AST.V1_21.Builder
                     , Text.Pandoc.AST.V1_21.Definition
                     , Text.Pandoc.AST.V1_21.Down
                     , Text.Pandoc.AST.V1_21.Up
                     , Text.Pandoc.AST.V1_22
                     , Text.Pandoc.AST.V1_22.Definition
                     , Text.Pandoc.AST.V1_22.Down
                     , AstMigrator
  build-depends:       aeson        >= 0.6.2  && < 1.6
                     , bytestring   >= 0.10.4 && < 0.11
                     , containers   >= 0.3
                     , deepseq      >= 1.4.1  && < 1.5
                     , pandoc-types == 1.22.*
                     , syb          >= 0.1    && < 0.8

executable ast-migrator
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       ast-migrator
                     , bytestring            >= 0.10.4 && < 0.11
                     , optparse-applicative
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite ast-migrator-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ast-migrator
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
